# AgentDevelopmentSkills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  agent_build_backend.py  install.ps1  install.sh  pyproject.toml  skill-naming-policy.json  uninstall.sh
.github/workflows/: conformance.yml  publish-release.yml
crates/agent-contracts/: Cargo.toml
crates/agent-contracts/src/: lib.rs
crates/agent-engine/: Cargo.toml
crates/agent-engine/src/: lib.rs  package_lock.rs  upgrade_contracts.rs  upgrade_plan.rs
crates/agent-lifecycle/: Cargo.toml  build.rs
crates/agent-lifecycle/src/: codex_config.rs  doctor_report.rs  external_stage.rs  installed_smoke.rs  lib.rs  managed_swap.rs  packages.rs  post_install.rs  rollback.rs  rollback_stage.rs  source_activation.rs  source_bundle.rs  source_install.rs  source_lifecycle.rs  source_packages.rs  source_rollback.rs  staged_install.rs  staged_tree.rs  transaction_lock.rs  transaction_workspace.rs  upgrade_plan.rs  upgrade_scope.rs
crates/agent-registry/: Cargo.toml
crates/agent-registry/src/: lib.rs
crates/agent-release/: Cargo.toml  build.rs
crates/agent-release/src/: hosted_upgrade.rs  lib.rs  main.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: adapters.rs  gate.rs  git_workspace.rs  invocations.rs  lib.rs  session_manifests.rs  session_registry.rs  sessions.rs
crates/agent-skills/: Cargo.toml
crates/agent-skills/src/: main.rs
crates/agent-skills/tests/: installed_session_launcher.rs  lifecycle_upgrade.rs
disciplines/design/: manifest.json
disciplines/design/contracts/: canonical-ui-ir-v1.schema.json  design-agent-packet-v1.schema.json  design-evidence-v1.schema.json  design-source-request-v1.schema.json  design-system-registry-v1.schema.json  (+1 more)
disciplines/documentation/: manifest.json
disciplines/git/: manifest.json
disciplines/qa/: manifest.json
disciplines/review/: manifest.json
disciplines/workflow/: manifest.json
docs/: architecture.md  cross-platform-agent-workflow-architecture.html  multi-session-worktree-architecture.html  multi-session-worktree.md  rust-migration.md  skill-naming-convention.html  skill-naming.md
docs/implementation/: phase-1-core-foundation.html  phase-2-ios-agent-skills-integration.html  phase-3-capability-inventory.json  phase-3-design-provider-and-canonical-ir.html  phase-4-capability-inventory.json  phase-4-qa-core-and-desktop-minimum.html  phase-5-platform-expansion.html  phase-6-distribution-and-governance.html
migration/: current-package-inventory-v1.json  ios-agent-skills-map-v2.json
providers/figma-design-source-provider/: manifest.json
providers/product-design-provider/: manifest.json
runtime-configs/codex/: manifest.json
schemas/: activation-lock-v1.schema.json  activation-lock-v2.schema.json  adapter-request-v1.schema.json  adapter-result-v1.schema.json  agent-skills-lock-v1.schema.json  approval-record-v1.schema.json  capability-contract-v1.schema.json  common-v1.schema.json  delivery-report-v1.schema.json  doctor-report-v1.schema.json  doctor-report-v2.schema.json  generic-request-v1.schema.json  generic-result-v1.schema.json  hosted-upgrade-plan-v1.schema.json  install-plan-v1.schema.json  migration-audit-v2.schema.json  migration-report-v1.schema.json  native-artifacts-v1.schema.json  node-attempt-v1.schema.json  package-inventory-v1.schema.json  plugin-manifest-v1.schema.json  project-profile-v1.schema.json  provider-invocation-selection-v1.schema.json  provider-invocation-v1.schema.json  python-artifacts-v1.schema.json  python-compatibility-evidence-v1.schema.json  release-gate-v1.schema.json  release-manifest-v1.schema.json  release-manifest-v2.schema.json  release-manifest-v3.schema.json  release-provenance-v1.schema.json  release-provenance-v2.schema.json  release-qualification-handoff-v1.schema.json  release-qualification-handoff-v2.schema.json  release-review-trust-store-v1.schema.json  release-review-v1.schema.json  release-review-v2.schema.json  release-review-v3.schema.json  release-sbom-v1.schema.json  resolved-policy-v1.schema.json  (+12 more)
scripts/: bootstrap_install.py  build_design_phase3_fixtures.py  build_migration_audit.py  build_pages_site.py  build_phase4_desktop_goldens.py  build_phase4_qa_goldens.py  build_python_artifacts.py  build_release_bundle.py  compare_apple_routes.py  import_apple_platform.py  install_local.py  native_artifact_contract.py  prepare_release_qualification.py  prepare_release_review.py  python_compatibility_evidence.py  run_apple_dual_route_smoke.py  run_conformance.py  run_desktop_installed_workflow_smoke.py  run_ios_installed_workflow_smoke.py  run_release_gate.py  uninstall_local.py  validate_apple_package.py  validate_github_publication.py  validate_manifests.py  validate_schemas.py  validate_skill_naming.py
src/agent_workflow/: __init__.py  activation.py  canonical_json.py  cli.py  contracts.py  doctor.py  installation.py  ledger_status.py  migrations.py  models.py  package_lock.py  recipes.py  upgrade.py
tests/: __init__.py  support.py  test_adapters.py  test_apple_design_packet_v2.py  test_apple_official_expertise.py  test_cli.py  test_compatibility.py  test_contracts.py  test_design_contracts.py  test_desktop_installed_workflow_smoke.py  test_desktop_provider.py  test_discovery_policy.py  test_distribution.py  test_doctor.py  test_github_publication.py  test_install_script.py  test_installation.py  test_ios_installed_workflow_smoke.py  test_ios_verification_workflow.py  test_migration_audit.py  test_migrations.py  test_package_lock.py  test_pages_distribution.py  test_planning.py  test_product_design_provider.py  test_provider_invocations.py  test_python_compatibility_evidence.py  test_python_packaging.py  test_qa_contracts.py  test_qa_runtime.py  test_qa_workflows.py  test_registry.py  test_release_gate.py  test_release_qualification.py  test_runtime.py  test_rust_compatibility.py  test_skill_naming.py  test_uninstall_script.py  test_upgrade.py  test_worktree_sessions.py
tests/fixtures/: desktop-environment.json
(+155 files in other folders)
