[package]
name = "agent-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_stacker.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
