[package]
name = "agent-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-registry = { path = "../agent-registry" }
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
