[package]
name = "agent-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-engine = { path = "../agent-engine" }
agent-registry = { path = "../agent-registry" }
cap-fs-ext.workspace = true
cap-std.workspace = true
libc.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
