[package]
name = "agent-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-engine = { path = "../agent-engine" }
agent-registry = { path = "../agent-registry" }
cap-fs-ext.workspace = true
cap-std.workspace = true
libc.workspace = true
rustix.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
renamore.workspace = true
winx.workspace = true

[build-dependencies]
sha2.workspace = true

[lints]
workspace = true
