[package]
name = "agent-release"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
clap.workspace = true
hex.workspace = true
libc.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
renamore.workspace = true

[lints]
workspace = true
