[package]
name = "agent-release"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-engine = { path = "../agent-engine" }
agent-lifecycle = { path = "../agent-lifecycle" }
clap.workspace = true
hex.workspace = true
libc.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
ureq.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
renamore.workspace = true

[lints]
workspace = true
