[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-engine = { path = "../agent-engine" }
cap-std.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
