[package]
name = "agent-skills-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-engine = { path = "../agent-engine" }
agent-lifecycle = { path = "../agent-lifecycle" }
agent-registry = { path = "../agent-registry" }
agent-runtime = { path = "../agent-runtime" }
clap.workspace = true
libc.workspace = true
serde_json.workspace = true

[lints]
workspace = true
